; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/xprtrdma/extr_svc_rdma_transport.c_svc_rdma_put_context.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/xprtrdma/extr_svc_rdma_transport.c_svc_rdma_put_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svc_rdma_op_ctxt = type { i32, i32*, %struct.svcxprt_rdma* }
%struct.svcxprt_rdma = type { i32 }

@svc_rdma_ctxt_cachep = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @svc_rdma_put_context(%struct.svc_rdma_op_ctxt* %0, i32 %1) #0 {
  %3 = alloca %struct.svc_rdma_op_ctxt*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.svcxprt_rdma*, align 8
  %6 = alloca i32, align 4
  store %struct.svc_rdma_op_ctxt* %0, %struct.svc_rdma_op_ctxt** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.svc_rdma_op_ctxt*, %struct.svc_rdma_op_ctxt** %3, align 8
  %8 = icmp ne %struct.svc_rdma_op_ctxt* %7, null
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i32 @BUG_ON(i32 %10)
  %12 = load %struct.svc_rdma_op_ctxt*, %struct.svc_rdma_op_ctxt** %3, align 8
  %13 = getelementptr inbounds %struct.svc_rdma_op_ctxt, %struct.svc_rdma_op_ctxt* %12, i32 0, i32 2
  %14 = load %struct.svcxprt_rdma*, %struct.svcxprt_rdma** %13, align 8
  store %struct.svcxprt_rdma* %14, %struct.svcxprt_rdma** %5, align 8
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %37

17:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %18

18:                                               ; preds = %33, %17
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.svc_rdma_op_ctxt*, %struct.svc_rdma_op_ctxt** %3, align 8
  %21 = getelementptr inbounds %struct.svc_rdma_op_ctxt, %struct.svc_rdma_op_ctxt* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = icmp slt i32 %19, %22
  br i1 %23, label %24, label %36

24:                                               ; preds = %18
  %25 = load %struct.svc_rdma_op_ctxt*, %struct.svc_rdma_op_ctxt** %3, align 8
  %26 = getelementptr inbounds %struct.svc_rdma_op_ctxt, %struct.svc_rdma_op_ctxt* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = load i32, i32* %6, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @put_page(i32 %31)
  br label %33

33:                                               ; preds = %24
  %34 = load i32, i32* %6, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %6, align 4
  br label %18

36:                                               ; preds = %18
  br label %37

37:                                               ; preds = %36, %2
  %38 = load i32, i32* @svc_rdma_ctxt_cachep, align 4
  %39 = load %struct.svc_rdma_op_ctxt*, %struct.svc_rdma_op_ctxt** %3, align 8
  %40 = call i32 @kmem_cache_free(i32 %38, %struct.svc_rdma_op_ctxt* %39)
  %41 = load %struct.svcxprt_rdma*, %struct.svcxprt_rdma** %5, align 8
  %42 = getelementptr inbounds %struct.svcxprt_rdma, %struct.svcxprt_rdma* %41, i32 0, i32 0
  %43 = call i32 @atomic_dec(i32* %42)
  ret void
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @put_page(i32) #1

declare dso_local i32 @kmem_cache_free(i32, %struct.svc_rdma_op_ctxt*) #1

declare dso_local i32 @atomic_dec(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
